--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
-== Pierson
+== Gandalf
 
-Pierson is the main application for Yale Events, a calendar and events subscription application for the Yale community.
+Gandalf is the main application for Yale Events, a calendar and events subscription application for the Yale community.
