--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,2 @@
-== Welcome to Gandalf
+== Gandalf README
+Gandalf is the main application for Yale Events, an events calendar and app for Yale students. It provides a full listing of Yale events, the ability to subscribe to event categories and organizations, and an administrator panel for Yale organization members.
