--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,8 @@
 Import list of all student organizations and their leaders. (Paul)
 FIX TIME ZONE ISSUE (-5:00) -- date doesn’t carry over if time zone crosses date boundary (scheduling events at 7 p.m or after) (Paul)
-
-Showing, adding, removing categories to events. On popups in the calendar and in add/edit events in the dashboard (Paul with Chosen)
 Facebook integration. Organizations should link to their own Facebook pages, and we can pull events from there. (Rafi)
 Create events as page: https://developers.facebook.com/docs/reference/api/page/#events
-Populate database with meaningful categories, and have some way of assigning categories to organizations and events (Rafi)
+
 **Seed database with events from current Events calendar (Paul - save for later)
 Typeahead for location selection (needs to be ROBUST) (Rafi)
 Formatted email to subscribers (Paul, last priority)
@@ -17,6 +15,10 @@ Style month
 Improve feed interface
 Add image attachment to events, organizations, and categories
 
-Completed!
+
+
+Completed:
 
 Daily email (user subscription and email preferences) (Rafi)
+Showing, adding, removing categories to events. On popups in the calendar and in add/edit events in the dashboard (Paul with Chosen -- but Rafi did it)
+Populate database with meaningful categories, and have some way of assigning categories to organizations and events (Rafi)
